fix(wardrobe):fix pictures upload